[fix bug 891269] Allow functional areas to wrap.

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -851,10 +851,11 @@ body#home {
                     position: relative;
                     margin-bottom: 20px;
                     h2 {
-                        line-height: 0.2;
-                        height: 30px;
                         margin: 0;
                         padding: 0 0 0 50px;
+                        position: relative;
+                        top: -10px;
+                        word-wrap: break-word;
                         @media (max-width: @breakMobileLandscape) {
                             padding: 0;
                             margin-top: 60px;
