[fix bug 898094] Use correct labels in services section of edit profile

--- a/apps/phonebook/templates/phonebook/edit_profile.html
+++ b/apps/phonebook/templates/phonebook/edit_profile.html
@@ -228,7 +228,7 @@
         {{ profile_form.allows_community_sites }}
       </p>
       <p>
-        {{ profile_form.allows_community_sites.label_tag() }}
+        {{ profile_form.allows_mozilla_sites.label_tag() }}
         {{ profile_form.allows_mozilla_sites }}
       </p>
 
